changed postman installer for m1, made conditional installs for brew/git/aws/ansible

--- a/playbooks/postman.yml
+++ b/playbooks/postman.yml
@@ -3,7 +3,7 @@
   become: yes
   vars:
     app_name: Postman
-    app_url: https://dl.pstmn.io/download/latest/osx
+    app_url: https://dl.pstmn.io/download/latest/osx_arm64
     installer_type: app
     download_file_type: zip
     install_method: dmg
